--- a/sections/realitycheck/intro.jade
+++ b/sections/realitycheck/intro.jade
@@ -1,15 +1,20 @@
 
 div.container-fluid.realitycontainer
     h2 RealityCheck
-    p.text.text-info This page is intended to offer you a step back from your social media immersion. See your informations exposure more clearly and 
-        b let you
-        |  judge if is it OK, or, if your informative diet might be different. 
+    p.text.text-info This page is intended to offer you a point of view external to your usual, everyday social media immersion. 
     p.text.text-info As you might guess, 
         b this is a work in progress
-        |  and if you are good with data visualisation, we can extend our APIs (
+        |  and we like to keep the project as open as possible to a variety of collaborations. If you work on data visualisation, you are more than welcome to help us improve/extend our APIs (
         a(href="https://github.com/tracking-exposed/facebook") and visualizations
                 |)
 
     p.text The tabs below, are intended to show you few profile information about you, your latest contribution and the metadata extracted by your submission. This page would became accessible only to you,
         i soon 
         | the autentication method is still a work in progress.
+        
+        h3 Dutch 2017 Election Project
+        p.text.text-info We are working on Facebook influence on the public sphere in times of elections. We are currently running a project of data collection for this 
+        b incoming elections in Netherland
+        | . See the call and the stats ( 
+        a( (href="https://facebook.tracking.exposed/NetherlandsElections") here
+                |)
