restoring in progress of overlook

--- a/sections/realitycheck/userNavbar.jade
+++ b/sections/realitycheck/userNavbar.jade
@@ -10,7 +10,7 @@ nav.navbar.navbar-default
     div.collapse.navbar-collapse(id="thenavbar")
       ul.nav.navbar-nav
         li
-          a(href='profile') Profile
+          a(href='overlook') Overlook (alpha)
         li
           a(href='recent') Recent Activities
         li
