somehow restored a kind of pseudo lookable timeline viz

--- a/sections/NetherlandsElections.jade
+++ b/sections/NetherlandsElections.jade
@@ -18,6 +18,15 @@ html
     include header
     include navbar
 
+  div.container-fluid.block
+      p.italic Facebook.tracking.exposed (fbtrex) is a tool that enable journalists and researchers  to understand how (and which) information spread across e social media.
+      p.italic When you are browsing facebook.com,  the chrome browser extension crawls public posts, which are then ar sent to our server . The data organized and stored  are available for download and can be of interest for researchers, as well as journalists, and activists.  
+      p.italic Numbers are crucial in this context. More users install the extension, the easier is to understand differences between bubbles, checking how different information  environments shape different information reality of the users. And, more crucially, how this relates with social and political phenomena. 
+      p.italic That’s why today we make this call for action, hoping it will spread across your network. We ask the help of contributors to archive digital evidences from each facebook personal experience. Together, we can understand how different information environments affect important political event like National Elections. 
+
+  div.container-fluid
+    div(id="dutchgraph")
+
   div.container-fluid.highlight This message is intended for researchers and journalists concerned by Facebook influence over national election (or other politically sensitive topic, as referendum, strike, protests, campaigns …) 
   div.container-fluid.block
 
@@ -55,8 +64,8 @@ html
       li Outreach: Compose some image, video, gif, posts, snap. whatever. The time is tight and the supporter group has to be diverse as possible.
       li Translation in Dutch? well, probably 105% of the Netherlanders speaks a better English than mine, but this call for support might sound more appropriate for a National election calls.
       li Get in touch with PirateParty or other parties that might benefit on monitoring their outreach on the social media: joining this project help also for that
-      li Speaks with everyone has mentioned in the last three months:
-        i radicalisation in the Social Media
+      li Speaks with everyone has mentioned in the last three months: 
+        i Radicalisation in the Social Media
         |  or about 
         i Fake News
         |: this project might shed some lights on the above political issues (just unfairly attributed to the technology), enabling a more informed debate on it.
