fixed jade mistake

--- a/sections/realitycheck/intro.jade
+++ b/sections/realitycheck/intro.jade
@@ -16,5 +16,5 @@ div.container-fluid.realitycontainer
         p.text.text-info We are working on Facebook influence on the public sphere in times of elections. We are currently running a project of data collection for this 
         b incoming elections in Netherland
         | . See the call and the stats ( 
-        a( (href="https://facebook.tracking.exposed/NetherlandsElections") here
-                |)
+        a(href="https://facebook.tracking.exposed/NetherlandsElections") here
+        | )
