--- a/sections/realitycheck/headers.jade
+++ b/sections/realitycheck/headers.jade
@@ -1,9 +1,7 @@
 link(rel='stylesheet', type='text/css', href='/css/bootstrap.css')
-link(rel='stylesheet', type='text/css', href='/js/local/realitycheck.css')
+link(rel='stylesheet', type='text/css', href='/js/local/impressionTable.css')
 
 script(type='text/javascript', src='/js/jquery.js')
-script(type='text/javascript', src='/js/d3.min.js')
-script(type='text/javascript', src='/js/cal-heatmap.min.js')
 script(type='text/javascript', src='/js/collapse.js')
 script(type='text/javascript', src='/js/bootstrap.min.js')
 script(type='text/javascript', src='/js/lodash.min.js')
