--- a/sections/realitycheck/intro.jade
+++ b/sections/realitycheck/intro.jade
@@ -14,7 +14,7 @@ div.container-fluid.realitycontainer
         
         h3 Dutch 2017 Election Project
         p.text.text-info We are working on Facebook influence on the public sphere in times of elections. We are currently running a project of data collection for this 
-        b incoming elections in Netherland
-        | . See the call and the stats ( 
-        a(href="https://facebook.tracking.exposed/NetherlandsElections") here
-        | )
+            b incoming elections in Netherland
+            |. 
+            a(href="https://facebook.tracking.exposed/NetherlandsElections") See the call and the stats
+            |.
