--- a/sections/realitycheck/overlook.jade
+++ b/sections/realitycheck/overlook.jade
@@ -1,9 +1,12 @@
 doctype html
 html
     head
-        link(rel='stylesheet', type='text/css', href='/js/local/overlook.css')
         include headers
+
+        link(rel='stylesheet', type='text/css', href='/js/local/overlook.css')
+        script(type='text/javascript', src='/js/d3.min.js')
         script(type='text/javascript', charset='utf8', src='/js/local/overlook.js')
+
         title facebook.tracking.exposed Your RealityCheck
 
     body(onload="loadRefreshMap(getSupporterId(), '#visualization');")
