last stilish changes

--- a/sections/realitycheck/overlook.jade
+++ b/sections/realitycheck/overlook.jade
@@ -24,8 +24,8 @@ html
                     p friends-only
                 div(class="legend" style='background-color: #f76f61')
                     p promoted
-                div(class="legend" style='background-color: #414141')
-                    p unrecognized
+                div(class="legend" style='background-color: lavender')
+                    p special / unrecognized
 
             span.col-md-1
             span.col-md-8
