--- a/sections/alarms.jade
+++ b/sections/alarms.jade
@@ -23,7 +23,7 @@ html
 
             form.center Password: 
                 input(id="password" name="password")
-                button(onclick="loadAlarms('#alarms');") Load
+                a(onclick="loadAlarms('#alarms');") Load
 
             div(id="alarms")
 
