css cleaning, debug cleanin

--- a/sections/webscripts/impressionTable.css
+++ b/sections/webscripts/impressionTable.css
@@ -34,6 +34,16 @@
     margin: 5px;
 }
 
+.unprocessed {
+    background-color: darkgrey;
+    color: white;
+    margin: 5px;
+}
+
+#shiftContributionBlock {
+    cursor: 'pointer';
+}
+
 .promoted {
     background-color: #FFEA75;
     margin: 5px;
