CSV data format can be downloaded now

--- a/sections/realitycheck/userNavbar.jade
+++ b/sections/realitycheck/userNavbar.jade
@@ -13,3 +13,5 @@ nav.navbar.navbar-default
           a(href='overlook') Overlook (alpha)
         li
           a(href='data') Submitted Data
+        li
+          a(href='csv') CSV
