fixed a small bug

--- a/sections/NetherlandsElections.jade
+++ b/sections/NetherlandsElections.jade
@@ -19,7 +19,7 @@ html
     include navbar
 
   div.container-fluid.block
-      p.italic Facebook.tracking.exposed (fbtrex) is a tool that enable journalists and researchers  to understand how (and which) information spread across e social media.
+      p.italic Facebook.tracking.exposed (fbtrex) is a tool that enables journalists and researchers to understand how (and which) information spreads across the social media.
       p.italic When you are browsing facebook.com,  the chrome browser extension crawls public posts, which are then ar sent to our server . The data organized and stored  are available for download and can be of interest for researchers, as well as journalists, and activists.  
       p.italic Numbers are crucial in this context. More users install the extension, the easier is to understand differences between bubbles, checking how different information  environments shape different information reality of the users. And, more crucially, how this relates with social and political phenomena. 
       p.italic That’s why today we make this call for action, hoping it will spread across your network. We ask the help of contributors to archive digital evidences from each facebook personal experience. Together, we can understand how different information environments affect important political event like National Elections. 
