changed title in alarm

--- a/sections/alarms.jade
+++ b/sections/alarms.jade
@@ -10,7 +10,7 @@ html
         script(type='text/javascript', src='/js/c3.min.js')
         script(type='text/javascript', src='/js/lodash.min.js')
         script(type='text/javascript', src='/js/local/alarms.js')
-        title Impact, adoption and open stats
+        title Alarm page
 
     body
     
