--- a/sections/webscripts/realitymeter.css
+++ b/sections/webscripts/realitymeter.css
@@ -10,17 +10,12 @@
     stroke: #000;
 }
 
-#infograph {
-    font-family: 'EB Garamond', serif;
-    text-size: 3em;
-    margin: 0;
-    padding-left: 10%;
-}
-#infograph b {
-    text-size: 1.3em;
-}
-
 svg {
     /* background-color: LightGoldenRodYellow; */
     background-color: white;
 }
+
+.text {
+    font-size: 1.4em;
+};
+
