minor improvement in realitycheck page

--- a/sections/realitymeter/app.jade
+++ b/sections/realitymeter/app.jade
@@ -21,8 +21,10 @@ html
     body(onload="loadStage(getPostId(), '#topPostsMessage', '#topPosts', '#infobox', '#container')")
 
         .container-fluid.realitycontainer
-            h2 RealityMeter: how much a post lives? how much is really saw?
-
+            h2 RealityMeter
+            h3 and reframe your expections in the algorithm society
+            p.text This is a prototype, and display how many times, when, in which rank, a facebook post is appear in a supporter newsfeed.
+        
         .container-fluid.realitycontainer
             span.col-md-1
             span.container-fluid.col-md-4.niceborder
@@ -44,8 +46,8 @@ html
             span.col-md-1
 
         .container-fluid.realitycontainer
-            p We don't know yet what is the best way to explain how algorithm works. we didn't yet found a visualization that scale well, with time and users. The metadata provided can be extended or changed if necessary, 
             div#infobox
             div#container
+            Below you can select some of the most collected posts, and see the API documentation:
             h3#topPostMessage
             div#topPosts
