--- a/sections/realitycheck/intro.jade
+++ b/sections/realitycheck/intro.jade
@@ -10,11 +10,7 @@ div.container-fluid.realitycontainer
 
     p.text The tabs below, are intended to show you few profile information about you, your latest contribution and the metadata extracted by your submission. This page would became accessible only to you,
         i soon 
-        | the autentication method is still a work in progress.
+        | the autentication method is still a work in progress. And a simple interface to consults posts life check the: 
+        a(href="/realitymeter") RealityMeter
+        |.
         
-        h3 Dutch 2017 Election Project
-        p.text.text-info We are working on Facebook influence on the public sphere in times of elections. We are currently running a project of data collection for this 
-            b incoming elections in Netherland
-            |. 
-            a(href="https://facebook.tracking.exposed/NetherlandsElections") See the call and the stats
-            |.
