--- a/sections/realitymeter/app.jade
+++ b/sections/realitymeter/app.jade
@@ -1,8 +1,8 @@
-
 doctype html
 html
     head
         link(rel='stylesheet', type='text/css', href='/css/bootstrap.css')
+        link(rel='stylesheet', type='text/css', href='/css/datatables.min.css')
         link(rel='stylesheet', type='text/css', href='/js/local/realitymeter.css')
         link(rel='stylesheet', type='text/css', href='/js/local/impressionTable.css')
 
@@ -13,12 +13,13 @@ html
         script(type='text/javascript', src='/js/d3.min.js')
         script(type='text/javascript', src='/js/c3.min.js')
         script(type='text/javascript', src='/js/moment.min.js')
+        script(type='text/javascript', src='/js/datatables.min.js')
 
         script(type='text/javascript', charset='utf8', src='/js/local/realitymeter.js')
 
         title facebook.tracking.exposed RealityMeter
 
-    body(onload="loadStage(getPostId(), '#topPostsMessage', '#topPosts', '#infobox', '#container')")
+    body(onload="loadStage(getPostId(), '#postsTable', '#infobox', '#container')")
 
         .container-fluid.realitycontainer
             h2 RealityMeter
@@ -49,5 +50,21 @@ html
             div#infobox
             div#container
             Below you can select some of the most collected posts, and see the API documentation:
-            h3#topPostMessage
-            div#topPosts
+            table#postsTable.display(cellspacing='0', width='100%')
+                thead
+                    tr
+                        th Accesses
+                        th users
+                        th Post type
+                        th Time ago
+                        th Countries 
+                        th First country
+                tfoot
+                    tr
+                        th Accesses
+                        th users
+                        th Post type
+                        th Time ago
+                        th Countries 
+                        th First country
+
