small cosmetic fixes

--- a/sections/navbar.jade
+++ b/sections/navbar.jade
@@ -14,11 +14,9 @@ block navbar
             li
               a(href='/') Home
             li
-              a(href='/beta') ß
+              a(href='https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi', target='_blank') Get Chrome extension
             li
               a(href='/privacy-statement') Privacy Statement
-            li
-              a(href='/impact') Stats
             li
               a(href='/initiatives/') Initiatives
             li
