--- a/sections/realitycheck/csv.jade
+++ b/sections/realitycheck/csv.jade
@@ -12,7 +12,7 @@ html
         div.container-fluid.realitycontainer
             p If you are a data journalist, a researcher, or just a curious artist, here you can download a CSV containing all the metadata we have extracted from your post. Soon or later we'll implement new visualization, in this phase of the project, we prefer delegate and distribute the research on algorithm visualization. many eyes will do better than few.
             p therefore, here you got your CSV. You can use some desktop program to do computation, or be inspired by 
-                a(target="_blank" href="https://rawgraphs.io") RawGraphs
+                a(target="_blank" href="http://rawgraphs.io") RawGraphs
                 |. Note, the .csv below are capped to the most 3000 entry in your profile.
             h4 Download 
                 b
