--- a/sections/realitymeter/app.jade
+++ b/sections/realitymeter/app.jade
@@ -43,7 +43,7 @@ html
                 div.smaller
                     p.right From 
                         a(href="https://www.theguardian.com/technology/2016/sep/28/google-facebook-powerful-secretive-empire-transparency") Facebook and Google: most powerful and secretive empires we've ever known
-                    |  28 Sept '16
+                    |  2016 September
             span.col-md-1
 
         .container-fluid.realitycontainer
