--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -10,7 +10,7 @@ html
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name="keywords" content="facebook tracking exposed")
-    title facebook tracking exposed: presentations and initiatives
+    title facebook tracking exposed: initiatives, experiments, and talks
 
   body
 
@@ -18,10 +18,8 @@ html
     include ../navbar 
 
     .container
-      h2 Upcoming initiatives
+      h3 Upcoming initiatives
       ul.fb--icon-list
-        li
-          a(href="/NetherlandsElections") The Netherlands elections call
         li
           a(href="https://www.rightscon.org") RightsCon 2017
           |, Demo Room
@@ -30,7 +28,31 @@ html
           |, 8 April, Perugia.
 
     .container
-      h2 Presentations
+      h3 Experiments done
+      ul.fb--icon-list
+        li
+          a(href="/NetherlandsElections") The Netherlands elections call
+          |, and this 
+          a(href="https://www.oneworld.nl/deze-tool-checkt-facebook-echt-de-verkiezingen-beinvloedt" target="_blank") OneWorld
+          |'s call for action
+        li
+          a(href="/alpha") alpha
+          |  and 
+          a(href="/beta") beta
+          |  status updates
+
+    .container
+      h3 Running experiments
+      ul.fb--icon-list
+        li Project's 
+          a(href="/impact") Open statistics
+      ul.fb--icon-list
+        li 
+          a(href="/realitymeter") RealityMeter
+          |, check which post get more evidences
+
+    .container
+      h3 Presentations
       table.table.table-striped
         thead
           tr
