--- a/sections/webscripts/realitymeter.css
+++ b/sections/webscripts/realitymeter.css
@@ -30,6 +30,18 @@ svg {
     border-bottom: black 1px dotted;
 }
 
+.timentry {
+    width: 750px;
+    max-width:750px;
+    display:inline-block;
+    border-bottom: lightblue 1px dotted;
+    font-color: lightgrey;
+    font-weight: 600;
+    text-align: right;
+    font-size: 0.8em;
+    padding-right: 50px;
+}
+
 .reduced {
     font-size: 0.7em;
     font-weight: bold;
@@ -48,3 +60,12 @@ svg {
     background-color: lightcyan;
 }
 
+.timeline {
+    cursor: pointer;
+}
+
+.highlight {
+    font-weight: 600;
+    font-color: darkgreen;
+    background: yellow;
+}
