--- a/sections/realitymeter/app.jade
+++ b/sections/realitymeter/app.jade
@@ -49,7 +49,7 @@ html
         .container-fluid.realitycontainer
             div#infobox
             div#container
-            Below you can select some of the most collected posts, and see the API documentation:
+            h4 Every post collected can be seen in realitymeter. Still, the only post with evidence provided by many users is interesting. Below you can pick some samples:
             table#postsTable.display(cellspacing='0', width='100%')
                 thead
                     tr
