rightscon slides 95% ready...

--- a/sections/background-thoughts.jade
+++ b/sections/background-thoughts.jade
@@ -13,7 +13,7 @@ html
     div.jumbotron
       div.head-text.fb-color
         div.container-fluid
-          h2 backgound thoughts on 
+          h3 Summer 2016 - backgound thoughts on 
           h1.center 
             a(href="/") ઉ
             | facebook.tracking.exposed
