--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -36,10 +36,8 @@ html
           a(href="https://www.oneworld.nl/deze-tool-checkt-facebook-echt-de-verkiezingen-beinvloedt" target="_blank") OneWorld
           |'s call for action
         li
-          a(href="/alpha") alpha
-          |  and 
           a(href="/beta") beta
-          |  status updates
+          |  updates, for supporters and technologiest
 
     .container
       h3 Running experiments
@@ -61,6 +59,14 @@ html
             th Event & Slides
             th Video
             th Language
+        tbody
+           tr
+            td 29 March '17
+            td RightsCon, Demo Room, Day 1. Brussels
+            td 
+              a(href="/talks-rightscon17/") RightsCon '17
+            td 
+            td English
         tbody
            tr
             td 23rd February '17
