--- a/sections/webscripts/slides.css
+++ b/sections/webscripts/slides.css
@@ -1,10 +1,30 @@
 
-.left {
-  text-align: left;
-  padding-left: 10%;
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Work Sans'), url(/js/local/WorkSans.ttf) format('truetype');
 }
 
-.right {
-  text-align: right;
-  padding-right: 10%;
+.text {
+    font-family: 'Work Sans', sans-serif;
+    text-align: left;
+}
+
+/* used in vecna.github.io pages - moscarda policy */
+
+.left {
+    text-align: left;
+}
+.floatleft {
+    text-align: left;
+    clear: both;
+}
+.container {
+    float: left;
+    width: 50%;
+}
+
+.big {
+  font-size: 1.6em;
 }
