--- a/sections/slides/experiments.jade
+++ b/sections/slides/experiments.jade
@@ -1,4 +1,4 @@
-section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
     h4 Experiments?
     ul
