--- a/sections/slides/livedemo.jade
+++ b/sections/slides/livedemo.jade
@@ -1,4 +1,4 @@
-section
+section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
     section
         img(src="/images/livedemomeme.jpg")
         p Proudly in ß! 
@@ -6,15 +6,19 @@ section
             a(href="https://facebook.tracking.exposed") https://facebook.tracking.exposed
 
     section
-        h4.small personal reminder
+        h4.small links reminder
         ul
-            li Extension installation
-            li RealityCheck
-            li RealityMeter
-            li revision page
-            li Open stats
+            li
+              a(href="https://www.oneworld.nl/deze-tool-checkt-facebook-echt-de-verkiezingen-beinvloedt" target="_blank") Extension installation
+            li
+              a(href="https://facebook.tracking.exposed/realitycheck/100013962451936/data" target="_blank") RealityCheck
+            li
+              a(href="https://facebook.tracking.exposed/realitymeter/" target="_blank") RealityMeter
+            li
+              a(href="https://facebook.tracking.exposed/revision/7083f13ffa2013438db7945dc8eab6011746d874" target="_blank") revision page
+            li
+              a(href="facebook.tracking.exposed/impact" target="_blank") Open stats
 
-    section(data-background-image="/images/cimitero.jpg")
     section
         img(src="/images/alphaviz1.png")
     section
