--- a/sections/slides/slide11.jade
+++ b/sections/slides/slide11.jade
@@ -1,3 +1,1 @@
-Ready to roll
-
-https://s-media-cache-ak0.pinimg.com/originals/93/33/35/933335cbb15288d60f1e709856a740d6.gif
+section(data-background="/images/ready2roll.gif")
