--- a/sections/slides/slide5.jade
+++ b/sections/slides/slide5.jade
@@ -1,22 +1,22 @@
 section
 
-    section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+    section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
         h2 Why is this a problem? 
         p.strong reinforce your biases and increase your prejudices  (testimonial and hermeneutical injustice) 
 
-    section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+    section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
         img(src="/images/AdvancingRacismWithFacebook.png")
 
-    section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+    section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
         img(src="/images/FBvsTwitterAndpersonalityPredictors.png")
 
-    section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+    section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
         img(src="/images/FBvsTwitterAndpersonalityPredictors.png")
 
-    section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+    section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
         img(src="/images/thespreadingofmisinformation.png")
