--- a/sections/talks/rightscon17.jade
+++ b/sections/talks/rightscon17.jade
@@ -56,13 +56,15 @@ html
         include ../slides/slide8
         include ../slides/slide9
         include ../slides/slide10
+        include ../slides/slide11
         
-        include ../slides/fbtrexconcepts
         include ../slides/livedemo
+        include ../slides/takeaway
         include ../slides/experiments
 
         section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
-            h2 THANKS, CIAO!
+            h3 the end! not tired?
+            p We've to build a community and fund raise!
             img(style="background-color:white; border:0;" src="/images/fbtrex_logo.svg")
 
     script.
