--- a/sections/slides/slide1.jade
+++ b/sections/slides/slide1.jade
@@ -1,6 +1,6 @@
 section
 
-    section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+    section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
         h2 do we 
             b need 
@@ -11,9 +11,9 @@ section
     section(data-background="/images/pattern-pasta.jpg" data-background-repeat="repeat" data-background-size="100px")
 
         p
-            b Guanciale, eggs, bucatini, onion, black pepper, (cream?)
+            b(style="font-size: 2.4em;color: black;") Guanciale, eggs, bucatini, onion, black pepper, pecorino
         p
-            b This is not enough to get a true Carbonara!
+            b(style="font-size: 2.4em;color: red;") This is not enough to get a Carbonara!
 
-    section(data-background="/images/chaos-wire.jpg")
-    section(data-background="/images/organized-wire.jpg")
+    section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
+        img(src="/images/carboanarafight.png")
