--- a/sections/slides/slide2.jade
+++ b/sections/slides/slide2.jade
@@ -5,7 +5,6 @@ section.left
             img(src="/images/epistemic-injustice.jpg")
         .container
             small They do much more than that.
-            blockquote
-                They shape our individual and social identity, by integrating with our capacity as knowers. Algorithms influence the way we gain knowledge from others (testimonial ability) and the way we include, an make sense of, others in our social world (hermeneutical ability).
+            p They shape our individual and social identity, by integrating with our capacity as knowers. Algorithms influence the way we gain knowledge from others (testimonial ability) and the way we include, an make sense of, others in our social world (hermeneutical ability).
 
 
