--- a/sections/slides/slide9.jade
+++ b/sections/slides/slide9.jade
@@ -1,11 +1,12 @@
-section(data-background="/images/pattern-simple.jpg" data-background-repeat="repeat" data-background-size="100px")
+section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
     h3 How can we achieve that?
 
     p 借刀杀人
     p (kill with a borrowed sword)
-    p “If you are limited in your own strength, then borrow the strength of the enemy.”
 
-    p (Thirty-six Stratagems, I.III)
+    .left
+        p “If you are limited in your own strength, then borrow the strength of the enemy.”
 
-
+    p
+      i Thirty-six Stratagems, I.III
