--- a/sections/slides/slide8.jade
+++ b/sections/slides/slide8.jade
@@ -1,20 +1,18 @@
-section
+section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
-    section(data-background="/images/pattern-open.jpg" data-background-repeat="repeat" data-background-size="100px")
-        ul.big
-            li quit facebook →  nope
-            li pop the information bubble →  nope
-            li more inclusive algorithms →  nope
+    section
+        h3 an hard problem
+        ul(style="font-size: 1.4em;")
+            li Quit facebook →  nope
+            li(class="fragment" data-fragment-index="0") Pop the information bubble →  nope
+            li(class="fragment" data-fragment-index="1") More inclusive algorithms? →  nope
 
-    section(data-background="/images/pattern-open.jpg" data-background-repeat="repeat" data-background-size="100px")
-        h4.red we need more than that!
-        h2 we need to understand the world through the eyes of others
+        p(style="font-size: 1.8em;" class="fragment" data-fragment-index="1") We need more than that!
 
-    section(data-background="/images/pattern-open.jpg" data-background-repeat="repeat" data-background-size="100px")
-        p not Algorithm 
-            b Independency
-        p Algorithm 
-            b Diversity
+    section
+        p(style="font-size: 2.3em; color: black; font-weight: 700") We need to understand the world through the eyes of others
 
-
-
+    section
+        p(style="font-size: 1.8em; border-bottom: 1px black solid;") not Algorithm Independency,
+        p(style="font-size: 1.8em; color: black")
+          b Algorithm Diversity
