--- a/sections/slides/livedemo.jade
+++ b/sections/slides/livedemo.jade
@@ -6,7 +6,7 @@ section(data-background="/images/pattern-open.png" data-background-repeat="repea
             a(href="https://facebook.tracking.exposed") https://facebook.tracking.exposed
 
     section
-        h4.small links reminder
+        h3 Pointers
         ul
             li
               a(href="https://www.oneworld.nl/deze-tool-checkt-facebook-echt-de-verkiezingen-beinvloedt" target="_blank") Extension installation
@@ -17,7 +17,7 @@ section(data-background="/images/pattern-open.png" data-background-repeat="repea
             li
               a(href="https://facebook.tracking.exposed/revision/7083f13ffa2013438db7945dc8eab6011746d874" target="_blank") revision page
             li
-              a(href="facebook.tracking.exposed/impact" target="_blank") Open stats
+              a(href="https://facebook.tracking.exposed/impact" target="_blank") Open stats
 
     section
         img(src="/images/alphaviz1.png")
