--- a/sections/slides/slide1.jade
+++ b/sections/slides/slide1.jade
@@ -11,9 +11,9 @@ section
     section(data-background="/images/pattern-pasta.jpg" data-background-repeat="repeat" data-background-size="100px")
 
         p
-            b(style="font-size: 2.4em;color: black;") Guanciale, eggs, bucatini, onion, black pepper, pecorino
+            b(style="font-size: 2.4em;color: black;") Guanciale, eggs, spaghetti, black pepper, pecorino cheese
         p
-            b(style="font-size: 2.4em;color: red;") This is not enough to get a Carbonara!
+            b(style="font-size: 2.4em;color: red;") not enough to get a Carbonara!
 
     section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
         img(src="/images/carboanarafight.png")
