--- a/sections/slides/slide4.jade
+++ b/sections/slides/slide4.jade
@@ -8,12 +8,9 @@ section(data-background="/images/pattern.png" data-background-repeat="repeat" da
     section
         img(src="/images/ferguson.png")
         p 
-            a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") Tufekci'14
+            a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") (Tufekci 2014)
 
         h4 So what? 
         p 
-            b some voices 
-            |  are not heard, 
-            b some worldviews
-            |  are not considered.
+            b some voices are not heard, some worldviews are not considered.
 
