--- a/sections/slides/slide5.jade
+++ b/sections/slides/slide5.jade
@@ -3,7 +3,7 @@ section(data-background="/images/pattern-open.png" data-background-repeat="repea
     section
 
         h2 Why is this a problem? 
-        p.strong reinforce your biases and increase your prejudices  (testimonial and hermeneutical injustice) 
+        p.strong reinforce your biases and increase your prejudices  
 
     section
 
