--- a/sections/slides/slide6.jade
+++ b/sections/slides/slide6.jade
@@ -1,5 +1,5 @@
 section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
     h1 OMG!
-    h3 "let's quit facebook right now!"
+    h3 let's quit facebook right now!
 
