--- a/sections/slides/slide8.jade
+++ b/sections/slides/slide8.jade
@@ -1,7 +1,7 @@
 section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
     section
-        h3 an hard problem
+        h3 the hard problem
         ul(style="font-size: 1.4em;")
             li Quit facebook →  nope
             li(class="fragment" data-fragment-index="0") Pop the information bubble →  nope
