override #64 onion threat

--- a/sections/slides/slide1.jade
+++ b/sections/slides/slide1.jade
@@ -13,7 +13,7 @@ section
         p
             b(style="font-size: 2.4em;color: black;") Guanciale, eggs, bucatini, onion, black pepper, pecorino
         p
-            b(style="font-size: 2.4em;color: red;") This is not enough to get a Carbonara!
+            b(style="font-size: 2.4em;color: red;") Not enough to get a Carbonara!
 
     section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
         img(src="/images/carboanarafight.png")
