--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -21,9 +21,6 @@ html
       h3 Upcoming initiatives
       ul.fb--icon-list
         li
-          a(href="https://www.rightscon.org") RightsCon 2017
-          |, Demo Room
-        li
           a(href="http://www.journalismfestival.com/programme/2017/exposing-what-facebook-wants-you-to-see") International Journalism Festival
           |, 8 April, Perugia.
 
@@ -61,8 +58,10 @@ html
             th Language
         tbody
            tr
-            td 29 March '17
-            td RightsCon, Demo Room, Day 1. Brussels
+            td 29th March '17
+            td
+              a(href="https://www.rightscon.org") RightsCon
+              |, Demo Room, Day 1. Brussels
             td 
               a(href="/talks-rightscon17/") RightsCon '17
             td 
