--- a/sections/slides/experiments.jade
+++ b/sections/slides/experiments.jade
@@ -1,11 +1,10 @@
 section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
-    h4 Experiments?
+    h4 Experiments
     ul
         li Two users: Same friends, different likes
         li Compare your group of friend
-        li How much you can change your feed?
-        li How much information get privileged and how much filtered?
-        li Can we measure the b
-            information sources and potential
-            |  of a profile?
+        li How fast you can change your feed?
+        li How many information get privileged and how many filtered?
+        li What's the average life of a post?
+        li Among friends, who's the most influential at parity of content?
