--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -18,13 +18,6 @@ html
     include ../navbar 
 
     .container
-      h3 Upcoming initiatives
-      ul.fb--icon-list
-        li
-          a(href="http://www.journalismfestival.com/programme/2017/exposing-what-facebook-wants-you-to-see") International Journalism Festival
-          |, 8 April, Perugia.
-
-    .container
       h3 Experiments done
       ul.fb--icon-list
         li
@@ -56,6 +49,15 @@ html
             th Event & Slides
             th Video
             th Language
+        tbody
+           tr
+            td 8th April '17
+            td
+              a(href="http://www.journalismfestival.com/programme/2017/exposing-what-facebook-wants-you-to-see") International Journalism Festival, Perugia
+            td 
+              a(href="/talks-ijf17/") IJF '17
+            td 
+            td English
         tbody
            tr
             td 29th March '17
