--- a/sections/slides/slide1.jade
+++ b/sections/slides/slide1.jade
@@ -2,7 +2,7 @@ section
 
     section(data-background="/images/pattern-open.png" data-background-repeat="repeat" data-background-size="100px")
 
-        h2 do we 
+        p(style="font-size: 2.4em;color: black;") do we 
             b need 
             |  algorithms?
 
@@ -11,7 +11,7 @@ section
     section(data-background="/images/pattern-pasta.jpg" data-background-repeat="repeat" data-background-size="100px")
 
         p
-            b(style="font-size: 2.4em;color: black;") Guanciale, eggs, bucatini, onion, black pepper, pecorino
+            b(style="font-size: 2.4em;color: black;") Guanciale, eggs, bucatini, black pepper, pecorino
         p
             b(style="font-size: 2.4em;color: red;") Not enough to get a Carbonara!
 
