update with ijf17 video

--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -57,6 +57,7 @@ html
             td 
               a(href="/talks-ijf17/") IJF '17
             td 
+              a(href="https://www.youtube.com/watch?v=wpnmDz9Os50") 45 mins video
             td English
         tbody
            tr
@@ -89,7 +90,7 @@ html
             td 
               a(href="/talks-netzpolitischer054/") Netzpolitischer Abend 54
             td
-              a(href="https://vimeo.com/189842857") https://vimeo.com/189842857
+              a(href="https://vimeo.com/189842857") 25 mins video
             td English
           tr
             td 25th October '16
