--- a/sections/talks/ijf17.jade
+++ b/sections/talks/ijf17.jade
@@ -13,7 +13,7 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title facebook.tracking.exposed - Algorithm Diversity at RightsCon 2017
+    title facebook.tracking.exposed - Algorithm Diversity at International Journalism Festival 2017
 
   body
 
