a forgotten space, as usual

--- a/sections/realitycheck/data.pug
+++ b/sections/realitycheck/data.pug
@@ -13,7 +13,9 @@ html
             p.text.text-warning At the moment we are not managing timezone properly, so you'll see the date shifted from GMT
 
         div.container-fluid.realitycontainer
-            p The metadata extraction can go deep to the number of likes, comments, language, sentiment and so on… implementation of these analysis will be available in the next weeks
+            p The metadata extraction can go deep to the number of likes, comments, language, sentiment and so on… implementation of these analysis will be 
+                a(href="https://github.com/tracking-exposed/facebook/tree/master/parsers") available in the next weeks
+                |.
             div#contributionBlock
             div#shiftContributionBlock(onclick="loadHTMLs(getSupporterId(), '#contributionBlock');")
               b Load Next 50…
