--- a/sections/impact.pug
+++ b/sections/impact.pug
@@ -56,7 +56,7 @@ html
 
     .container-fluid
         .simpletext
-            h2 Medadata available
+            h2 Metadata available
             p The analysis is made by the parser, 
                 a(href="https://github.com/tracking-exposed/facebook/issues/44") try to see how they works
         div(id="metadata")
