improved jumboheader looking for mobile devices

--- a/sections/header.pug
+++ b/sections/header.pug
@@ -1,20 +1,20 @@
 block header
   
-  div.container-fluid
-    div.row-fluid
-      span.col-xs-2.center
-        img(src="/images/fbtrex_logo.svg")
-      span.col-xs-8.center
-        p.big
+  div.container
+    div.jumbotron
+      div.col-xs-8.col-sm-8.col-md-8.col-lg-8
+        p
+          img(src="/images/github-256.png" width=32 height=32) 
+          a(href="https://github.com/tracking-exposed/web-extension") broweser extension
+          |, 
+          a(href="https://github.com/tracking-exposed/facebook") backend
+
+      div.col-xs-4.col-sm-4.col-md-4.col-lg-4.pull-right
+        img(vspace="20" class="jumbotronwidth" alt="logo of fbtrex" src="/images/fbtrex_logo.svg")
+      div.col-xs-8.col-sm-8.col-md-8.col-lg-8
+        h2
           span.blue facebook
           |.
           span.orange tracking
           |.
           span.green exposed
-        p.italic ß release, still 
-          a(href="https://github.com/tracking-exposed/web-extension") work i
-          a(href="https://github.com/tracking-exposed/facebook") n progress
-          | ⚡
-      span.col-xs-2.center
-        img(src="/images/fbtrex_logo.svg")
-
