--- a/styles/index.styl
+++ b/styles/index.styl
@@ -31,9 +31,20 @@ p
 .buttonfield
   width 10%
 
+.jumbotronwidth
+  max-width 50%
+
+.jumbotron
+  background-color white
+
 .monospace
   font-family 'Source Code Pro', monospace
   margin 0
+
+.mainstyle
+  padding-right 10%
+  padding-left 10%
+  padding-bottom 2%
 
 .propaganda
   padding-right 10%
@@ -102,7 +113,7 @@ p
   font-size 0.8em
 
 .big
-  padding-top 10%
+  padding-top 5%
   font-size 3em
 
 .white
