--- a/sections/privacyStatement.pug
+++ b/sections/privacyStatement.pug
@@ -1,12 +1,24 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/css/index.css')
-    link(rel='stylesheet', href='/css/bootstrap.css')
-    meta(charset="utf-8")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    title Privacy Statement
+
+   link(rel='stylesheet', href='/css/bootstrap.css')
+   link(rel='stylesheet', href='/css/index.css')
+   script(type='text/javascript', src='/js/jquery.js')
+   script(type='text/javascript', src='/js/collapse.js')
+   script(type='text/javascript', src='/js/bootstrap.min.js')
+   meta(charset="utf-8")
+   meta(http-equiv="X-UA-Compatible" content="IE=edge")
+   meta(name="viewport" content="width=device-width, initial-scale=1")
+   meta(name="keywords" content="facebook.tracking.exposed privacy policy")
+   meta(property="og:title" content="facebook.tracking.exposed privacy policy")
+   meta(property="og:type" content="website")
+   meta(property="og:description" content="Facebook Tracking Exposed declaration on privacy, data management and rensponsability assumed")
+   meta(property="og:url" content="https://facebook.tracking.exposed/privacy-statement")
+   meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
+   meta(property="og:image:width" content="400")
+   meta(property="og:image:height" content="400")
+   title Privacy Statement
 
   body
     include header
