--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -1,15 +1,23 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/css/index.css')
+
     link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/index.css')
     script(type='text/javascript', src='/js/jquery.js')
     script(type='text/javascript', src='/js/collapse.js')
     script(type='text/javascript', src='/js/bootstrap.min.js')
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    meta(name="keywords" content="facebook tracking exposed")
+    meta(name="keywords" content="facebook.tracking.exposed initiatives, research and open data")
+    meta(property="og:title" content="facebook.tracking.exposed initiatives, research and open data")
+    meta(property="og:type" content="website")
+    meta(property="og:description" content="Facebook Tracking Exposed list of talks, initiatives, research and open data")
+    meta(property="og:url" content="https://facebook.tracking.exposed")
+    meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
+    meta(property="og:image:width" content="400")
+    meta(property="og:image:height" content="400")
     title facebook tracking exposed: initiatives, experiments, and talks
 
   body
@@ -17,29 +25,27 @@ html
     include ../header
     include ../navbar
 
-    .container
+    div.mainstyle
       h3 Experiments done
       ul.fb--icon-list
         li
           a(href="/NetherlandsElections") The Netherlands elections call
-          |, and this
+          |, and the 
           a(href="https://www.oneworld.nl/deze-tool-checkt-facebook-echt-de-verkiezingen-beinvloedt" target="_blank") OneWorld
           |'s call for action
         li
           a(href="/beta") beta
           |  updates, for supporters and technologiest
 
-    .container
       h3 Running experiments
       ul.fb--icon-list
-        li Project's
+        li Project's 
           a(href="/impact") Open statistics
       ul.fb--icon-list
         li
           a(href="/realitymeter") RealityMeter
           |, check which post get more evidences
 
-    .container
       h3 Presentations
       table.table.table-striped
         thead
