--- a/sections/team.pug
+++ b/sections/team.pug
@@ -1,23 +1,23 @@
 doctype html
 html
     head
-        link(rel='stylesheet', href='/css/index.css')
+
         link(rel='stylesheet', href='/css/bootstrap.css')
+        link(rel='stylesheet', href='/css/index.css')
         script(type='text/javascript', src='/js/jquery.js')
         script(type='text/javascript', src='/js/collapse.js')
         script(type='text/javascript', src='/js/bootstrap.min.js')
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        meta(name="keywords" content="inclusive team, worldwide community")
-
-        meta(property="og:title" content="facebook.tracking.exposed")
+        meta(name="keywords" content="facebook.tracking.exposed initiatives, research and open data")
+        meta(property="og:title" content="facebook.tracking.exposed initiatives, research and open data")
         meta(property="og:type" content="website")
-        meta(property="og:description" content="The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only through a global and inclusive community able to critic the algorithms from multiple points of views")
-        meta(property="og:url" content="https://facebook.tracking.exposed/about")
+        meta(property="og:url" content="https://facebook.tracking.exposed")
         meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
         meta(property="og:image:width" content="400")
         meta(property="og:image:height" content="400")
+        meta(property="og:description" content="The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only through a global and inclusive community able to critic the algorithms from multiple points of views")
 
         title About Us
 
@@ -26,7 +26,7 @@ html
         include header
         include navbar 
 
-        .container-fluid
+        div.mainstyle
             p The team below is volunteer based. If you have questions, please mail 
                 b support﹫tracking・exposed; 
                 | We have a Facebook page, to organize experiments on the social media sphere, please join us on 
@@ -40,7 +40,7 @@ html
                         a(href="/initiatives") hacker events
                     |. This has been driven by opportunities and is not a self-segregating decision.
 
-        .container-fluid
+        div.mainstyle
             h2 Contributor Team
             table.table.table-striped
                 thead
