typo in the jumbotron, hahaha

--- a/sections/header.pug
+++ b/sections/header.pug
@@ -3,11 +3,12 @@ block header
   div.container
     div.jumbotron
       div.col-xs-8.col-sm-8.col-md-8.col-lg-8
-        p
-          img(src="/images/github-256.png" width=32 height=32) 
-          a(href="https://github.com/tracking-exposed/web-extension") broweser extension
+        p < 
+          img(src="/images/github-256.png" width=24 height=24)
+          a(href="https://github.com/tracking-exposed/web-extension") browser extension
           |, 
           a(href="https://github.com/tracking-exposed/facebook") backend
+          |  /> 
 
       div.col-xs-4.col-sm-4.col-md-4.col-lg-4.pull-right
         img(vspace="20" class="jumbotronwidth" alt="logo of fbtrex" src="/images/fbtrex_logo.svg")
